<resources>
    <string name="app_name">agenciaViajes</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="logo_description">Descripción del logo de la aplicación</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_photos">Photos</string>
    <string name="menu_video">Video</string>
    <string name="menu_web">Web</string>
    <string name="menu_welcome">Home</string>
    <string name="profile">Profile</string>
    <string name="name_profile">Carl Toon</string>
    <string name="about">About</string>
    <string name="bio">Apasionado por explorar el mundo, siempre en busca de nuevas aventuras. Desde escalar montañas en
        los Andes hasta perderme en las calles de ciudades antiguas, cada viaje es una oportunidad para descubrir
        culturas y crear recuerdos inolvidables. ¡La próxima aventura me espera!\"
    </string>
    <string name="user_information">User Information</string>
    <string name="username_">Username</string>
    <string name="carltoon">carltoon1998</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="age">Age</string>
    <string name="_21">21</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="_17_12_1998">17/12/1998</string>
    <string name="mobile">Mobile</string>
    <string name="_57_3001239876">+57 3001239876</string>
    <string name="email">Email</string>
    <string name="axxxxxxa_gmail_com">axxxxxxa@gmail.com</string>
    <string name="social_media">Social Media</string>
    <string name="menu_settings">Settings</string>
    <string name="grupo">Grupo: MovB01-Grupo14</string>
    <string name="integrantes">Integrantes</string>
    <string name="jhonM">- Jhon Alejandro Murillo Diaz</string>
    <string name="danielE">- Daniel Orlando Espinosa Recaman</string>
    <string name="JohnatanB">- Johnatan Yair Bautista Gonzalez</string>
    <string name="carlosA">- Carlos Yecid Ascencio Cely</string>
    <string name="yonathanM">- Yonathan Molina C.</string>
    <string name="ingrese_url">Ingrese URL</string>
    <string name="mensaje_ayuda">Ejemplo: https://www.google.com/</string>
    <string name="welcome_message">¡Bienvenido a nuestra aplicación Agencia de viajes!</string>
    <string name="comenzar">Comenzar</string>
</resources>