<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_menu_profile"
                android:title="@string/menu_profile" />
        <item
                android:id="@+id/nav_photos"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/menu_photos"/>
        <item
                android:id="@+id/nav_video"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/menu_video"/>
        <item
                android:id="@+id/nav_web"
                android:icon="@drawable/ic_menu_web"
                android:title="@string/menu_web"/>
    </group>
</menu>