<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation"
            app:startDestination="@+id/nav_welcome">

    <fragment
            android:id="@+id/nav_welcome"
            android:name="com.poli.agenciaviajes.ui.welcome.WelcomeFragment"
            android:label="@string/menu_welcome"
            tools:layout="@layout/fragment_welcome"/>
    <fragment
            android:id="@+id/nav_profile"
            android:name="com.poli.agenciaviajes.ui.profile.ProfileFragment"
            android:label="@string/menu_profile"
            tools:layout="@layout/fragment_profile"/>
    <fragment
            android:id="@+id/nav_photos"
            android:name="com.poli.agenciaviajes.ui.photos.PhotosFragment"
            android:label="@string/menu_photos"
            tools:layout="@layout/fragment_photos"/>
    <fragment
            android:id="@+id/nav_video"
            android:name="com.poli.agenciaviajes.ui.video.VideoFragment"
            android:label="@string/menu_video"
            tools:layout="@layout/fragment_video"/>
    <fragment
            android:id="@+id/nav_web"
            android:name="com.poli.agenciaviajes.ui.web.WebFragment"
            android:label="@string/menu_web"
            tools:layout="@layout/fragment_web"/>
</navigation>